Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,11 +118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = None # 'Italy'\n",
+    "italy = countries # 'Italy'\n",
     "italy"
    ]
   },
