--- a/index.ipynb
+++ b/index.ipynb
@@ -144,8 +144,7 @@
     }
    ],
    "source": [
-    "italy = countries # 'Italy'\n",
-    "italy"
+    "italy = countries # 'Italy'\n"
    ]
   },
   {
