--- a/index.ipynb
+++ b/index.ipynb
@@ -118,33 +118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'New Mexico',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'Italy',\n",
-       " 'Canada',\n",
-       " 'South Korea']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "italy = countries = 'Italy\n"
+    "italy = countries = 'Italy'\n"
    ]
   },
   {
