--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = countries = 'Italy'\n"
+    "italy = countries #\n"
    ]
   },
   {
