Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = countries #3\n"
+    "italy = countries \n"
    ]
   },
   {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -156,7 +156,7 @@
        " 'South Korea']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
