Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,11 +118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = [cou]\n"
+    "italy = [countries\n"
    ]
   },
   {
