Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,11 +118,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Italy'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "italy = countries [9]\n"
+    "italy # countries [9]\n"
    ]
   },
   {
