Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = countri\n",
+    "kindof_neighbors = countries [1,2,3,4]\n",
     "kindof_neighbors"
    ]
   },
