Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
     }
    ],
    "source": [
-    "kindof_neighbors = countries [1,2,3,4]"
+    "kindof_neighbors = countries "
    ]
   },
   {
