Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -174,11 +174,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mexico'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mexico = countries [3]"
+    "mexico = countries [3]\n",
+    "mexico"
    ]
   },
   {
