--- a/index.ipynb
+++ b/index.ipynb
@@ -202,11 +202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['USA', 'Argentina', 'Mexico']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "kindof_neighbors = countries[1:4]"
+    "kindof_neighbors = countries[1:4]\n",
+    "kindof_neighbors"
    ]
   },
   {
