Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.ap # add code here"
+    "countries.append "
    ]
   },
   {
