--- a/index.ipynb
+++ b/index.ipynb
@@ -237,11 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append "
+    "countries.append('Malta')"
    ]
   },
   {
