Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.ap # add code here"
+    "countries.append # ('T')"
    ]
   },
   {
