--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Malta')"
+    "countries.append ('Malta')"
    ]
   },
   {
@@ -253,11 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function list.append>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "countries.append # ('T')"
+    "countries.append # ('Thailand')"
    ]
   },
   {
