Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -237,11 +237,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function list.append>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "countries.append ('Malta')"
+    "countries.append # ('Malta')"
    ]
   },
   {
