--- a/index.ipynb
+++ b/index.ipynb
@@ -282,22 +282,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function list.append>"
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Malta',\n",
+       " 'Malta',\n",
+       " 'Malta',\n",
+       " 'Malta',\n",
+       " 'Malta',\n",
+       " 'Thailand']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries.append ('Thailand')"
+    "countries.append ('Thailand')\n",
+    "countries"
    ]
   },
   {
