Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -349,10 +349,13 @@
        " 'Malta',\n",
        " 'Malta',\n",
        " 'Malta',\n",
-       " 'Malta']"
+       " 'Malta',\n",
+       " 'Malta',\n",
+       " 'Malta',\n",
+       " 'Thailand']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
