--- a/index.ipynb
+++ b/index.ipynb
@@ -379,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = (6) # add code here"
+    "countries [6] # add code here"
    ]
   },
   {
