Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,41 +375,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'USA',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'Italy',\n",
-       " 'Canada',\n",
-       " 'South Korea',\n",
-       " 'Malta',\n",
-       " 'Malta',\n",
-       " 'Malta',\n",
-       " 'Malta',\n",
-       " 'Malta',\n",
-       " 'Malta',\n",
-       " 'Thailand']"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "countries [6]=('USA')\n",
-    "cou"
+    "countries [6]=('USA')"
    ]
   },
   {
