--- a/index.ipynb
+++ b/index.ipynb
@@ -480,11 +480,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Mexico',\n",
+       " 'Morocco',\n",
+       " 'Croatia',\n",
+       " 'Italy',\n",
+       " 'South Korea',\n",
+       " 'Argentina',\n",
+       " 'Finland',\n",
+       " 'Canada',\n",
+       " 'Malta',\n",
+       " 'USA']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_countries  # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
     "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland'] Note: order of countries may be different"
